# wow_addon_updater

./: .gitignore  Cargo.toml  build.sh  config.json  config_backup.json  run.sh
wow_addon_updater/: Cargo.toml
wow_addon_updater/src/: api.rs  client.rs  config.rs  elvui.rs  err.rs  main.rs  server.rs  ui.rs  util.rs  wow_interface.rs
wow_addon_updater_shared/: Cargo.toml
wow_addon_updater_shared/src/: lib.rs
wow_addon_updater_webview/: Cargo.toml
wow_addon_updater_webview/src/: main.rs
wow_addon_updater_webview/static/: index.html
