[package]
name = "wow_addon_updater"
version = "0.1.0"
authors = ["mucks <mail@mucks.me>"]
edition = "2018"
default-run = "wow_addon_updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
select = "0.4.3"
zip = "0.5"
serde = "1"
serde_json = "1"
web-view = "0.5.2"
actix-web = "1"
actix-rt = "0.2"
futures = "0.1"
mime_guess = "2"
rust-embed = "5"
wow_addon_updater_shared = { path = "../wow_addon_updater_shared" }